--- a/VentUI.ui
+++ b/VentUI.ui
@@ -526,13 +526,13 @@
            <widget class="QStackedWidget" name="controlStack">
             <property name="minimumSize">
              <size>
-              <width>299</width>
+              <width>350</width>
               <height>110</height>
              </size>
             </property>
             <property name="maximumSize">
              <size>
-              <width>400</width>
+              <width>550</width>
               <height>16777215</height>
              </size>
             </property>
@@ -624,16 +624,27 @@
               <property name="geometry">
                <rect>
                 <x>27</x>
-                <y>44</y>
-                <width>41</width>
-                <height>16</height>
+                <y>90</y>
+                <width>71</width>
+                <height>31</height>
                </rect>
               </property>
+              <property name="font">
+               <font>
+                <family>MS Shell Dlg 2</family>
+                <pointsize>16</pointsize>
+                <weight>75</weight>
+                <bold>true</bold>
+               </font>
+              </property>
               <property name="styleSheet">
-               <string notr="true">color:black</string>
+               <string notr="true">color: rgb(152, 142, 255);</string>
               </property>
               <property name="text">
                <string>VT</string>
+              </property>
+              <property name="alignment">
+               <set>Qt::AlignCenter</set>
               </property>
              </widget>
              <widget class="QDial" name="iedial">
@@ -759,16 +770,26 @@
               <property name="geometry">
                <rect>
                 <x>130</x>
-                <y>44</y>
-                <width>21</width>
-                <height>16</height>
+                <y>90</y>
+                <width>71</width>
+                <height>31</height>
                </rect>
               </property>
+              <property name="font">
+               <font>
+                <pointsize>16</pointsize>
+                <weight>75</weight>
+                <bold>true</bold>
+               </font>
+              </property>
               <property name="styleSheet">
-               <string notr="true">color:black</string>
+               <string notr="true">color: rgb(152, 142, 255);</string>
               </property>
               <property name="text">
                <string>IE</string>
+              </property>
+              <property name="alignment">
+               <set>Qt::AlignCenter</set>
               </property>
              </widget>
              <widget class="QDial" name="rrdial">
@@ -805,17 +826,27 @@
              <widget class="QLabel" name="label_14">
               <property name="geometry">
                <rect>
-                <x>238</x>
-                <y>44</y>
-                <width>22</width>
-                <height>14</height>
+                <x>218</x>
+                <y>90</y>
+                <width>81</width>
+                <height>31</height>
                </rect>
               </property>
+              <property name="font">
+               <font>
+                <pointsize>16</pointsize>
+                <weight>75</weight>
+                <bold>true</bold>
+               </font>
+              </property>
               <property name="styleSheet">
-               <string notr="true">color:black</string>
+               <string notr="true">color: rgb(152, 142, 255);</string>
               </property>
               <property name="text">
                <string>RR</string>
+              </property>
+              <property name="alignment">
+               <set>Qt::AlignCenter</set>
               </property>
              </widget>
              <widget class="QLCDNumber" name="rrlcd">
@@ -872,6 +903,94 @@
               </property>
               <property name="text">
                <string>Change</string>
+              </property>
+             </widget>
+             <widget class="QLabel" name="labelipap">
+              <property name="geometry">
+               <rect>
+                <x>318</x>
+                <y>90</y>
+                <width>81</width>
+                <height>31</height>
+               </rect>
+              </property>
+              <property name="font">
+               <font>
+                <pointsize>16</pointsize>
+                <weight>75</weight>
+                <bold>true</bold>
+               </font>
+              </property>
+              <property name="styleSheet">
+               <string notr="true">color: rgb(152, 142, 255);</string>
+              </property>
+              <property name="text">
+               <string>IPAP</string>
+              </property>
+              <property name="alignment">
+               <set>Qt::AlignCenter</set>
+              </property>
+             </widget>
+             <widget class="QDial" name="ipapdial">
+              <property name="enabled">
+               <bool>false</bool>
+              </property>
+              <property name="geometry">
+               <rect>
+                <x>310</x>
+                <y>0</y>
+                <width>100</width>
+                <height>100</height>
+               </rect>
+              </property>
+              <property name="minimumSize">
+               <size>
+                <width>100</width>
+                <height>100</height>
+               </size>
+              </property>
+              <property name="styleSheet">
+               <string notr="true">background-color: rgb(20,40,30)</string>
+              </property>
+              <property name="minimum">
+               <number>5</number>
+              </property>
+              <property name="maximum">
+               <number>30</number>
+              </property>
+              <property name="value">
+               <number>18</number>
+              </property>
+             </widget>
+             <widget class="QLCDNumber" name="ipaplcd">
+              <property name="geometry">
+               <rect>
+                <x>330</x>
+                <y>30</y>
+                <width>64</width>
+                <height>40</height>
+               </rect>
+              </property>
+              <property name="minimumSize">
+               <size>
+                <width>0</width>
+                <height>40</height>
+               </size>
+              </property>
+              <property name="styleSheet">
+               <string notr="true">color:blue</string>
+              </property>
+              <property name="frameShape">
+               <enum>QFrame::NoFrame</enum>
+              </property>
+              <property name="digitCount">
+               <number>3</number>
+              </property>
+              <property name="segmentStyle">
+               <enum>QLCDNumber::Flat</enum>
+              </property>
+              <property name="intValue" stdset="0">
+               <number>25</number>
               </property>
              </widget>
             </widget>
@@ -1328,87 +1447,6 @@
              </widget>
             </widget>
             <widget class="QWidget" name="page_3">
-             <widget class="QLabel" name="labelipap">
-              <property name="geometry">
-               <rect>
-                <x>20</x>
-                <y>50</y>
-                <width>31</width>
-                <height>14</height>
-               </rect>
-              </property>
-              <property name="styleSheet">
-               <string notr="true">color:black</string>
-              </property>
-              <property name="text">
-               <string>IPAP</string>
-              </property>
-              <property name="alignment">
-               <set>Qt::AlignCenter</set>
-              </property>
-             </widget>
-             <widget class="QLCDNumber" name="ipaplcd">
-              <property name="geometry">
-               <rect>
-                <x>30</x>
-                <y>40</y>
-                <width>64</width>
-                <height>40</height>
-               </rect>
-              </property>
-              <property name="minimumSize">
-               <size>
-                <width>0</width>
-                <height>40</height>
-               </size>
-              </property>
-              <property name="styleSheet">
-               <string notr="true">color:blue</string>
-              </property>
-              <property name="frameShape">
-               <enum>QFrame::NoFrame</enum>
-              </property>
-              <property name="digitCount">
-               <number>3</number>
-              </property>
-              <property name="segmentStyle">
-               <enum>QLCDNumber::Flat</enum>
-              </property>
-              <property name="intValue" stdset="0">
-               <number>25</number>
-              </property>
-             </widget>
-             <widget class="QDial" name="ipapdial">
-              <property name="enabled">
-               <bool>false</bool>
-              </property>
-              <property name="geometry">
-               <rect>
-                <x>10</x>
-                <y>10</y>
-                <width>100</width>
-                <height>100</height>
-               </rect>
-              </property>
-              <property name="minimumSize">
-               <size>
-                <width>100</width>
-                <height>100</height>
-               </size>
-              </property>
-              <property name="styleSheet">
-               <string notr="true">background-color: rgb(20,40,30)</string>
-              </property>
-              <property name="minimum">
-               <number>5</number>
-              </property>
-              <property name="maximum">
-               <number>30</number>
-              </property>
-              <property name="value">
-               <number>18</number>
-              </property>
-             </widget>
              <widget class="QLCDNumber" name="ilcd_bp">
               <property name="geometry">
                <rect>
@@ -1705,9 +1743,6 @@
               </property>
              </widget>
              <zorder>iedial_bipap</zorder>
-             <zorder>ipapdial</zorder>
-             <zorder>labelipap</zorder>
-             <zorder>ipaplcd</zorder>
              <zorder>ilcd_bp</zorder>
              <zorder>rrdial_bipap</zorder>
              <zorder>label_18</zorder>
@@ -1900,6 +1935,38 @@
            </widget>
           </item>
           <item>
+           <widget class="QStackedWidget" name="imageStack">
+            <property name="maximumSize">
+             <size>
+              <width>160</width>
+              <height>16777215</height>
+             </size>
+            </property>
+            <widget class="QWidget" name="page_12">
+             <widget class="QLabel" name="logo">
+              <property name="geometry">
+               <rect>
+                <x>0</x>
+                <y>10</y>
+                <width>141</width>
+                <height>41</height>
+               </rect>
+              </property>
+              <property name="text">
+               <string/>
+              </property>
+              <property name="pixmap">
+               <pixmap>logo.png</pixmap>
+              </property>
+              <property name="scaledContents">
+               <bool>true</bool>
+              </property>
+             </widget>
+            </widget>
+            <widget class="QWidget" name="page_13"/>
+           </widget>
+          </item>
+          <item>
            <widget class="QStackedWidget" name="infoStack">
             <property name="minimumSize">
              <size>
@@ -2029,9 +2096,9 @@
              <widget class="QLabel" name="peak_lung_2">
               <property name="geometry">
                <rect>
-                <x>58</x>
+                <x>38</x>
                 <y>28</y>
-                <width>31</width>
+                <width>91</width>
                 <height>31</height>
                </rect>
               </property>
@@ -2047,7 +2114,10 @@
                <string notr="true">color:rgb(0, 170, 0)</string>
               </property>
               <property name="text">
-               <string>LP</string>
+               <string>LPeak</string>
+              </property>
+              <property name="alignment">
+               <set>Qt::AlignCenter</set>
               </property>
              </widget>
              <widget class="QWidget" name="lp_back" native="true">
@@ -2078,9 +2148,9 @@
               <widget class="QLabel" name="label">
                <property name="geometry">
                 <rect>
-                 <x>30</x>
+                 <x>16</x>
                  <y>30</y>
-                 <width>47</width>
+                 <width>91</width>
                  <height>31</height>
                 </rect>
                </property>
@@ -2103,7 +2173,7 @@ background-color: rgba(255, 255, 255, 0);</string>
                 <enum>QFrame::Plain</enum>
                </property>
                <property name="text">
-                <string>FP</string>
+                <string>FPeak</string>
                </property>
                <property name="alignment">
                 <set>Qt::AlignCenter</set>
@@ -2125,9 +2195,9 @@ background-color: rgba(255, 255, 255, 0);</string>
               <widget class="QLabel" name="label_7">
                <property name="geometry">
                 <rect>
-                 <x>40</x>
+                 <x>16</x>
                  <y>30</y>
-                 <width>47</width>
+                 <width>101</width>
                  <height>31</height>
                 </rect>
                </property>
@@ -2150,7 +2220,7 @@ background-color: rgba(255, 255, 255, 0);</string>
                 <enum>QFrame::Plain</enum>
                </property>
                <property name="text">
-                <string>VP</string>
+                <string>VPeak</string>
                </property>
                <property name="alignment">
                 <set>Qt::AlignCenter</set>
@@ -2385,7 +2455,6 @@ color: rgb(0, 255, 0);</string>
   <tabstop>lowpdial</tabstop>
   <tabstop>himinitdial</tabstop>
   <tabstop>lowminitdial</tabstop>
-  <tabstop>ipapdial</tabstop>
   <tabstop>t_acc</tabstop>
   <tabstop>t_xmax</tabstop>
   <tabstop>t_xamb</tabstop>
