--- a/VentUI.ui
+++ b/VentUI.ui
@@ -2237,7 +2237,7 @@ background-color: rgba(255, 255, 255, 0);</string>
                 <enum>QFrame::Plain</enum>
                </property>
                <property name="text">
-                <string>FPeak</string>
+                <string>EPAP</string>
                </property>
                <property name="alignment">
                 <set>Qt::AlignCenter</set>
