--- a/VentUI.ui
+++ b/VentUI.ui
@@ -540,113 +540,6 @@
              <number>0</number>
             </property>
             <widget class="QWidget" name="page">
-             <widget class="QDial" name="vtdial">
-              <property name="enabled">
-               <bool>false</bool>
-              </property>
-              <property name="geometry">
-               <rect>
-                <x>10</x>
-                <y>0</y>
-                <width>100</width>
-                <height>100</height>
-               </rect>
-              </property>
-              <property name="minimumSize">
-               <size>
-                <width>100</width>
-                <height>100</height>
-               </size>
-              </property>
-              <property name="styleSheet">
-               <string notr="true">background-color: rgb(200,200,20)</string>
-              </property>
-              <property name="minimum">
-               <number>1</number>
-              </property>
-              <property name="maximum">
-               <number>7</number>
-              </property>
-              <property name="singleStep">
-               <number>50</number>
-              </property>
-              <property name="value">
-               <number>5</number>
-              </property>
-              <property name="wrapping">
-               <bool>false</bool>
-              </property>
-              <property name="notchTarget">
-               <double>10.000000000000000</double>
-              </property>
-              <property name="notchesVisible">
-               <bool>true</bool>
-              </property>
-             </widget>
-             <widget class="QLCDNumber" name="vtlcd">
-              <property name="enabled">
-               <bool>false</bool>
-              </property>
-              <property name="geometry">
-               <rect>
-                <x>50</x>
-                <y>40</y>
-                <width>41</width>
-                <height>30</height>
-               </rect>
-              </property>
-              <property name="minimumSize">
-               <size>
-                <width>0</width>
-                <height>20</height>
-               </size>
-              </property>
-              <property name="styleSheet">
-               <string notr="true">color:black</string>
-              </property>
-              <property name="frameShape">
-               <enum>QFrame::NoFrame</enum>
-              </property>
-              <property name="frameShadow">
-               <enum>QFrame::Plain</enum>
-              </property>
-              <property name="digitCount">
-               <number>3</number>
-              </property>
-              <property name="segmentStyle">
-               <enum>QLCDNumber::Flat</enum>
-              </property>
-              <property name="intValue" stdset="0">
-               <number>500</number>
-              </property>
-             </widget>
-             <widget class="QLabel" name="label_13">
-              <property name="geometry">
-               <rect>
-                <x>27</x>
-                <y>90</y>
-                <width>71</width>
-                <height>31</height>
-               </rect>
-              </property>
-              <property name="font">
-               <font>
-                <family>MS Shell Dlg 2</family>
-                <pointsize>16</pointsize>
-                <weight>75</weight>
-                <bold>true</bold>
-               </font>
-              </property>
-              <property name="styleSheet">
-               <string notr="true">color: rgb(152, 142, 255);</string>
-              </property>
-              <property name="text">
-               <string>VT</string>
-              </property>
-              <property name="alignment">
-               <set>Qt::AlignCenter</set>
-              </property>
-             </widget>
              <widget class="QDial" name="iedial">
               <property name="enabled">
                <bool>false</bool>
@@ -1079,9 +972,6 @@
               </property>
              </widget>
              <zorder>peakdial</zorder>
-             <zorder>vtdial</zorder>
-             <zorder>vtlcd</zorder>
-             <zorder>label_13</zorder>
              <zorder>iedial</zorder>
              <zorder>ilcd</zorder>
              <zorder>label_17</zorder>
@@ -1962,6 +1852,113 @@
                <number>21</number>
               </property>
              </widget>
+             <widget class="QLabel" name="label_13">
+              <property name="geometry">
+               <rect>
+                <x>257</x>
+                <y>250</y>
+                <width>71</width>
+                <height>31</height>
+               </rect>
+              </property>
+              <property name="font">
+               <font>
+                <family>MS Shell Dlg 2</family>
+                <pointsize>16</pointsize>
+                <weight>75</weight>
+                <bold>true</bold>
+               </font>
+              </property>
+              <property name="styleSheet">
+               <string notr="true">color: rgb(152, 142, 255);</string>
+              </property>
+              <property name="text">
+               <string>VT</string>
+              </property>
+              <property name="alignment">
+               <set>Qt::AlignCenter</set>
+              </property>
+             </widget>
+             <widget class="QLCDNumber" name="vtlcd">
+              <property name="enabled">
+               <bool>false</bool>
+              </property>
+              <property name="geometry">
+               <rect>
+                <x>280</x>
+                <y>200</y>
+                <width>41</width>
+                <height>30</height>
+               </rect>
+              </property>
+              <property name="minimumSize">
+               <size>
+                <width>0</width>
+                <height>20</height>
+               </size>
+              </property>
+              <property name="styleSheet">
+               <string notr="true">color:black</string>
+              </property>
+              <property name="frameShape">
+               <enum>QFrame::NoFrame</enum>
+              </property>
+              <property name="frameShadow">
+               <enum>QFrame::Plain</enum>
+              </property>
+              <property name="digitCount">
+               <number>3</number>
+              </property>
+              <property name="segmentStyle">
+               <enum>QLCDNumber::Flat</enum>
+              </property>
+              <property name="intValue" stdset="0">
+               <number>500</number>
+              </property>
+             </widget>
+             <widget class="QDial" name="vtdial">
+              <property name="enabled">
+               <bool>false</bool>
+              </property>
+              <property name="geometry">
+               <rect>
+                <x>240</x>
+                <y>160</y>
+                <width>100</width>
+                <height>100</height>
+               </rect>
+              </property>
+              <property name="minimumSize">
+               <size>
+                <width>100</width>
+                <height>100</height>
+               </size>
+              </property>
+              <property name="styleSheet">
+               <string notr="true">background-color: rgb(200,200,20)</string>
+              </property>
+              <property name="minimum">
+               <number>1</number>
+              </property>
+              <property name="maximum">
+               <number>7</number>
+              </property>
+              <property name="singleStep">
+               <number>50</number>
+              </property>
+              <property name="value">
+               <number>5</number>
+              </property>
+              <property name="wrapping">
+               <bool>false</bool>
+              </property>
+              <property name="notchTarget">
+               <double>10.000000000000000</double>
+              </property>
+              <property name="notchesVisible">
+               <bool>true</bool>
+              </property>
+             </widget>
             </widget>
            </widget>
           </item>
@@ -1972,6 +1969,9 @@
               <width>160</width>
               <height>16777215</height>
              </size>
+            </property>
+            <property name="currentIndex">
+             <number>0</number>
             </property>
             <widget class="QWidget" name="page_12">
              <widget class="QLabel" name="logo">
@@ -2509,7 +2509,6 @@ background-color: rgba(255, 255, 255, 0);</string>
   <tabstop>btnhault</tabstop>
   <tabstop>btninitbipap</tabstop>
   <tabstop>btnrunbploop</tabstop>
-  <tabstop>vtdial</tabstop>
   <tabstop>iedial</tabstop>
   <tabstop>rrdial</tabstop>
   <tabstop>connect</tabstop>
