--- a/VentUI.ui
+++ b/VentUI.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1041</width>
+    <width>1218</width>
     <height>615</height>
    </rect>
   </property>
@@ -2149,8 +2149,8 @@ background-color: rgb(255, 255, 0);</string>
              <widget class="QPushButton" name="btnShowHide">
               <property name="geometry">
                <rect>
-                <x>630</x>
-                <y>0</y>
+                <x>750</x>
+                <y>40</y>
                 <width>75</width>
                 <height>23</height>
                </rect>
@@ -2429,7 +2429,7 @@ color: rgb(0, 255, 0);</string>
              <widget class="QWidget" name="lp_back_3" native="true">
               <property name="geometry">
                <rect>
-                <x>490</x>
+                <x>493</x>
                 <y>0</y>
                 <width>126</width>
                 <height>61</height>
@@ -2466,13 +2466,88 @@ background-color: rgba(255, 255, 255, 0);</string>
                 <enum>QFrame::Plain</enum>
                </property>
                <property name="text">
-                <string>VPeak</string>
+                <string>In Vol</string>
                </property>
                <property name="alignment">
                 <set>Qt::AlignCenter</set>
                </property>
               </widget>
              </widget>
+             <widget class="QWidget" name="lp_back_6" native="true">
+              <property name="geometry">
+               <rect>
+                <x>619</x>
+                <y>0</y>
+                <width>126</width>
+                <height>61</height>
+               </rect>
+              </property>
+              <property name="styleSheet">
+               <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:0, stop:0 rgba(55, 10, 20, 155), stop:1 rgba(255, 55, 35, 155));</string>
+              </property>
+              <widget class="QLabel" name="label_22">
+               <property name="geometry">
+                <rect>
+                 <x>16</x>
+                 <y>30</y>
+                 <width>101</width>
+                 <height>31</height>
+                </rect>
+               </property>
+               <property name="font">
+                <font>
+                 <family>Consolas</family>
+                 <pointsize>20</pointsize>
+                 <weight>75</weight>
+                 <bold>true</bold>
+                </font>
+               </property>
+               <property name="autoFillBackground">
+                <bool>false</bool>
+               </property>
+               <property name="styleSheet">
+                <string notr="true">color:rgb(0, 170, 0);
+background-color: rgba(255, 255, 255, 0);</string>
+               </property>
+               <property name="frameShadow">
+                <enum>QFrame::Plain</enum>
+               </property>
+               <property name="text">
+                <string>Ex Vol</string>
+               </property>
+               <property name="alignment">
+                <set>Qt::AlignCenter</set>
+               </property>
+              </widget>
+              <widget class="QLabel" name="ex_vol">
+               <property name="geometry">
+                <rect>
+                 <x>0</x>
+                 <y>0</y>
+                 <width>121</width>
+                 <height>31</height>
+                </rect>
+               </property>
+               <property name="font">
+                <font>
+                 <family>Consolas</family>
+                 <pointsize>14</pointsize>
+                 <weight>75</weight>
+                 <bold>true</bold>
+                </font>
+               </property>
+               <property name="styleSheet">
+                <string notr="true">color: rgb(0, 255, 0);</string>
+               </property>
+               <property name="text">
+                <string>0.0</string>
+               </property>
+               <property name="alignment">
+                <set>Qt::AlignCenter</set>
+               </property>
+              </widget>
+             </widget>
+             <zorder>lp_back_3</zorder>
              <zorder>lp_back_2</zorder>
              <zorder>lp_back</zorder>
              <zorder>label_alarm</zorder>
@@ -2484,7 +2559,7 @@ background-color: rgba(255, 255, 255, 0);</string>
              <zorder>lbl_rr</zorder>
              <zorder>lp_back_5</zorder>
              <zorder>peak_vol</zorder>
-             <zorder>lp_back_3</zorder>
+             <zorder>lp_back_6</zorder>
             </widget>
             <widget class="QWidget" name="page_11"/>
            </widget>
