--- a/VentUI.ui
+++ b/VentUI.ui
@@ -526,13 +526,13 @@
            <widget class="QStackedWidget" name="controlStack">
             <property name="minimumSize">
              <size>
-              <width>330</width>
+              <width>333</width>
               <height>140</height>
              </size>
             </property>
             <property name="maximumSize">
              <size>
-              <width>550</width>
+              <width>333</width>
               <height>16777215</height>
              </size>
             </property>
@@ -2547,6 +2547,33 @@ background-color: rgba(255, 255, 255, 0);</string>
                </property>
               </widget>
              </widget>
+             <widget class="QLabel" name="lbl_volume">
+              <property name="geometry">
+               <rect>
+                <x>750</x>
+                <y>10</y>
+                <width>101</width>
+                <height>31</height>
+               </rect>
+              </property>
+              <property name="font">
+               <font>
+                <family>Consolas</family>
+                <pointsize>14</pointsize>
+                <weight>75</weight>
+                <bold>true</bold>
+               </font>
+              </property>
+              <property name="styleSheet">
+               <string notr="true">color: rgb(0, 255, 0);</string>
+              </property>
+              <property name="text">
+               <string>0.0</string>
+              </property>
+              <property name="alignment">
+               <set>Qt::AlignCenter</set>
+              </property>
+             </widget>
              <zorder>lp_back_3</zorder>
              <zorder>lp_back_2</zorder>
              <zorder>lp_back</zorder>
@@ -2560,6 +2587,7 @@ background-color: rgba(255, 255, 255, 0);</string>
              <zorder>lp_back_5</zorder>
              <zorder>peak_vol</zorder>
              <zorder>lp_back_6</zorder>
+             <zorder>lbl_volume</zorder>
             </widget>
             <widget class="QWidget" name="page_11"/>
            </widget>
